Added Internal Router + Enpoints command

--- a/modules/example/manifest.json
+++ b/modules/example/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "My Module Name 2",
+    "name": "My Module",
     "short_name": "my-module-name",
     "description": "A simple module for demonstrating Modulingg usage.",
     "author": "Author Name",
