Added Internal router config + Documentation

--- a/modulingg/config/config.json
+++ b/modulingg/config/config.json
@@ -2,5 +2,6 @@
     "module_whitelist": false,
     "enabled_modules_whitelist": [],
     "module_launcher_name": "main",
-    "modules_folder_name": "modules"
+    "modules_folder_name": "modules",
+    "enable_internal_router":true
 }
