--- a/modulingg/config/config.json
+++ b/modulingg/config/config.json
@@ -4,7 +4,9 @@
     "module_launcher_name": "main",
     "modules_folder_name": "modules",
     "enable_internal_router":true,
-    "modulingg_version": "1.3.1",
+    "modulingg_version": "1.3.2",
     "launcher_fastapi_host": "0.0.0.0",
-    "launcher_fastapi_port": 8000
+    "launcher_fastapi_port": 8000,
+    "modulingg_prefix": "/modulingg"
+
 }
