--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ Jinja2==3.1.4
 kiwisolver==1.4.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.0
-matplotlib==3.9.2
+# matplotlib==3.9.2
 mdurl==0.1.2
 numpy==2.1.3
 packaging==24.2
